Replace `.collect(Collectors.toList())` with `.toList()` where possible