@@ -6,7 +6,6 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
 
@@ -101,7 +100,7 @@ public class Section extends AbstractSection<Section> implements Comparable<Sect
 	protected boolean hasDuplicatedChildSections() {
 		List<String> headers = childSections.stream()
 			.map(AbstractSection::getStrippedHeader)
-			.collect(Collectors.toList());
+			.toList();
 		
 		Map<String, Integer> cardinalityMap = CollectionUtils.getCardinalityMap(headers);
 		
